--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "ushiboy",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
@@ -39,8 +40,10 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "3.0.3"
+    "connect": "^3.6.0",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
+    "react-router": "^3.0.5"
   }
 }
